--- a/background.html
+++ b/background.html
@@ -32,10 +32,9 @@ chrome.extension.onRequest.addListener(currentTabRequest);
 
 function currentTabRequest(request, sender, sendResponse)
 {
-	console.log("request.action "+request.action);
     if (request.action == "showIcon")
     {
-    	chrome.pageAction.show(sender.tab.id);
+        chrome.pageAction.show(sender.tab.id);
     }
 
 }
@@ -44,17 +43,35 @@ chrome.pageAction.onClicked.addListener(onClicked);
 
 function onClicked(tab)
 {
-	var projectId = getProjectIdFromUrl(tab.url);
-	chrome.tabs.create({url:"storyBoard.html?projectId="+projectId});
+    var projectId = getProjectIdFromUrl(tab.url);
+    var useHttps;
+    if (tab.url.indexOf("https") == 0)
+        useHttps = "true";
+    else
+        useHttps = "false";
+
+    chrome.tabs.create({url:"storyBoard.html?projectId="+projectId+"&useHttps="+useHttps});
 }
 
 function getProjectIdFromUrl(url)
 {
-	var str = new String(url);
-	str = str.substr(str.lastIndexOf('/')+1);
-	if (str.indexOf('?') > -1)
-		str = str.substring(0, str.indexOf('?'));
-	return str;
+    var str = new String(url);
+    var projects = 'projects/';
+    str = str.substr(str.lastIndexOf(projects) + projects.length);
+
+    //removeing extra chars after the project id
+    if (str.indexOf('/') > -1)
+        str = str.substr(0, str.indexOf('/'));
+
+    //removing params after the project id
+    if (str.indexOf('?') > -1)
+        str = str.substring(0, str.indexOf('?'));
+
+    //removing anchors after the project id
+    if (str.indexOf('#') > -1)
+        str = str.substring(0, str.indexOf('#'));
+
+    return str;
 }
 
 
