--- a/storyBoard.html
+++ b/storyBoard.html
@@ -27,7 +27,12 @@
 <head>
 <title>Pivotal Tracker Story Board</title>
 <LINK href="css/storyBoard.css" rel="stylesheet" type="text/css">
+<LINK href="css/loader.css" rel="stylesheet" type="text/css">
+<LINK href="css/error.css" rel="stylesheet" type="text/css">
+<LINK href="css/body.css" rel="stylesheet" type="text/css">
+<LINK href="css/links.css" rel="stylesheet" type="text/css">
 <script src="scripts/mootools-1.2.4-core-jm.js"></script>
+<script src="scripts/storyBoardLib.js"></script>
 <script src="scripts/StoryBoard.js"></script>
 <script src="scripts/StoryColumn.js"></script>
 <script src="scripts/StoryCard.js"></script>
@@ -37,37 +42,7 @@
 <script>
 
 
-function getOffset( el ) {
-    var _x = 0;
-    var _y = 0;
-    while( el && !isNaN( el.offsetLeft ) && !isNaN( el.offsetTop ) ) {
-        _x += el.offsetLeft;
-        _y += el.offsetTop;
-        el = el.parentNode;
-    }
-    return { top: _y, left: _x };
-}
 
-function getURLParam(strParamName)
-{
-    var strReturn = "";
-    var strHref = window.location.href;
-    if ( strHref.indexOf("?") > -1 )
-    {
-        var strQueryString = strHref.substr(strHref.indexOf("?")).toLowerCase();
-        var aQueryString = strQueryString.split("&");
-        for ( var iParam = 0; iParam < aQueryString.length; iParam++ )
-        {
-            if (aQueryString[iParam].indexOf(strParamName.toLowerCase() + "=") > -1 )
-            {
-                  var aParam = aQueryString[iParam].split("=");
-                strReturn = aParam[1];
-                break;
-            }
-        }
-    }
-    return unescape(strReturn);
-}
 
 function onProjectLoaded(responseText, responseXML)
 {
@@ -84,22 +59,6 @@ function onRequestStart()
     loader.showLoader();
 }
 
-function onXmlRequestError(xhr)
-{
-    var message = "OOPS!! Something went wrong!<BR>";
-    if (xhr.responseText != undefined)
-        message += xhr.responseText + "<BR>";
-    message += "STATUS: "+xhr.status;
-
-    if (xhr.status == 422)
-        message += "<br>Make sure you've set the correct API token for this user. Check it in the <a href='options.html' target='_blank'>options page</a>";
-    else if ((xhr.status == 0))
-        message += "<br>Try and refresh the page!";
-    else
-        message += "<br>Have you set the API Token in the <a href='options.html' target='_blank'>options page</a> of the extension?<br>";
-
-    errorDialog.showError(message);
-}
 
 function onStoriesLoaded(responseText, responseXML)
 {
@@ -135,13 +94,7 @@ function startStoriesTimer()
     pivotalClient.getStories(projectId, storiesFilter, onRequestStart, onStoriesLoaded, onXmlRequestError);
 }
 
-function getTextContentForElement(src, elementTag)
-{
-    var elements = src.getElementsByTagName(elementTag);
-    if (elements.length > 0)
-        return elements[0].textContent;
-    return "";
-}
+
 
 </script>
 
