--- a/options.html
+++ b/options.html
@@ -2,7 +2,17 @@
 <head>
 <LINK href="css/options.css" rel="stylesheet" type="text/css">
 <title>Pivotal Tracker Story Board Options</title>
+<script>
+     var _gaq = _gaq || [];
+     _gaq.push(['_setAccount', 'UA-10092155-3']);
+     _gaq.push(['_trackPageview']);
 
+     (function() {
+       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+       ga.src = 'https://ssl.google-analytics.com/ga.js';
+       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+     })();
+   </script>
 <script type="text/javascript">
 
 // Saves options to localStorage.
