--- a/storyBoard.html
+++ b/storyBoard.html
@@ -124,7 +124,17 @@ Project name
 <div id="error">
 Error!
 </div>
+<script>
+     var _gaq = _gaq || [];
+     _gaq.push(['_setAccount', 'UA-10092155-3']);
+     _gaq.push(['_trackPageview']);
 
+     (function() {
+       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+       ga.src = 'https://ssl.google-analytics.com/ga.js';
+       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+     })();
+   </script>
 <script>
 
 var errorDialog = new ErrorDialog($('error'));
